# GMV

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
code/: ANS_ewma.py  GIS_ewma.py  LIS_ewma.py  QIS_ewma.py  dataloader.py  fit_hp.py  markowitz.py  scraping.py  weighted_LWO_estimator.py
code/data_yf/2010/: AAPL_100101_110101.csv  ABT_100101_110101.csv  ADBE_100101_110101.csv  ADI_100101_110101.csv  ADM_100101_110101.csv  ADP_100101_110101.csv  ADSK_100101_110101.csv  AEP_100101_110101.csv  AES_100101_110101.csv  AFL_100101_110101.csv  AIG_100101_110101.csv  AJG_100101_110101.csv  ALB_100101_110101.csv  ALK_100101_110101.csv  ALL_100101_110101.csv  AMAT_100101_110101.csv  AMD_100101_110101.csv  AME_100101_110101.csv  AMGN_100101_110101.csv  AON_100101_110101.csv  AOS_100101_110101.csv  APA_100101_110101.csv  APD_100101_110101.csv  APH_100101_110101.csv  ATO_100101_110101.csv  AVB_100101_110101.csv  AVY_100101_110101.csv  AXP_100101_110101.csv  AZO_100101_110101.csv  BAC_100101_110101.csv  BALL_100101_110101.csv  BAX_100101_110101.csv  BA_100101_110101.csv  BBWI_100101_110101.csv  BBY_100101_110101.csv  BDX_100101_110101.csv  BEN_100101_110101.csv  BIIB_100101_110101.csv  BIO_100101_110101.csv  BKR_100101_110101.csv  (+274 more)
code/data_yf/2011/: AAPL_110101_120101.csv  ABT_110101_120101.csv  ADBE_110101_120101.csv  ADI_110101_120101.csv  ADM_110101_120101.csv  ADP_110101_120101.csv  ADSK_110101_120101.csv  AEP_110101_120101.csv  AES_110101_120101.csv  AFL_110101_120101.csv  AIG_110101_120101.csv  AJG_110101_120101.csv  ALB_110101_120101.csv  ALK_110101_120101.csv  (+300 more)
(+9858 files in other folders)
