[project]
name = "gmv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  # Common deps without platform constraints
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "pandas>=2.3.1",
  "scikit-learn>=1.7.1",
  "scipy>=1.16.1",
  "seaborn>=0.13.2",
  'torch>=2.8.0; sys_platform == "darwin" and platform_machine == "arm64"',
  #'torch<=2.7.1; platform_machine=="x86_64" and sys_platform=="darwin"',
  "ipykernel>=6.30.1"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.8",
]

